Did the major part of HTML and some CSS

--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Calculator</title>
 </head>
 <body>
-  <div>
-    
+  <div id="Calc-body">
+    <div id="top-space"></div>
+    <div id="screen">
+      <p id="screenText"></p>
+    </div>
+    <div id="buttons">
+      <div Class="Row">
+        <button class="btn" id="bC" onclick="bC()">C</button>
+        <button class="btn" id="bS">X^2</button>
+        <button class="btn" id="bE"><</button>
+        <button class="btn" id="bD">/</button>
+      </div>
+      <div Class="Row">
+        <button class="btn" id="bSe">7</button>
+        <button class="btn" id="bEi">8</button>
+        <button class="btn" id="bN">9</button>
+        <button class="btn" id="bM">x</button>
+      </div>
+      <div Class="Row">
+        <button class="btn" id="bF">4</button>
+        <button class="btn" id="bFi">5</button>
+        <button class="btn" id="bSi">6</button>
+        <button class="btn" id="bMi">-</button>
+      </div>
+      <div Class="Row">
+        <button class="btn"id="bO">1</button>
+        <button class="btn"id="bT">2</button>
+        <button class="btn"id="bTh">3</button>
+        <button class="btn"id="bP">+</button>
+      </div>
+      <div Class="Row">
+        <button class="btn"id="bR">√x</button>
+        <button class="btn"id="bZ">0</button>
+        <button class="btn"id="bCo">,</button>
+        <button class="btn"id="bEq">=</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
