added some js functions

--- a/index.html
+++ b/index.html
@@ -15,36 +15,37 @@
     </div>
     <div id="buttons">
       <div Class="Row">
-        <button class="btn" id="bC" onclick="bC()">C</button>
-        <button class="btn" id="bS">X^2</button>
-        <button class="btn" id="bE"><</button>
-        <button class="btn" id="bD">/</button>
+        <button class="btn" onclick="bC()">C</button>
+        <button class="btn" onclick="bS()">X^2</button>
+        <button class="btn" onclick="bE()"><</button>
+        <button class="btn" onclick="bD()">/</button>
       </div>
       <div Class="Row">
-        <button class="btn" id="bSe">7</button>
-        <button class="btn" id="bEi">8</button>
-        <button class="btn" id="bN">9</button>
-        <button class="btn" id="bM">x</button>
+        <button class="btn" onclick="bSe()">7</button>
+        <button class="btn" onclick="bEi()">8</button>
+        <button class="btn" onclick="bN()">9</button>
+        <button class="btn" onclick="bM()">x</button>
       </div>
       <div Class="Row">
-        <button class="btn" id="bF">4</button>
-        <button class="btn" id="bFi">5</button>
-        <button class="btn" id="bSi">6</button>
-        <button class="btn" id="bMi">-</button>
+        <button class="btn" onclick="bF()">4</button>
+        <button class="btn" onclick="bFi()">5</button>
+        <button class="btn" onclick="bSi()">6</button>
+        <button class="btn" onclick="bMi()">-</button>
       </div>
       <div Class="Row">
-        <button class="btn"id="bO">1</button>
-        <button class="btn"id="bT">2</button>
-        <button class="btn"id="bTh">3</button>
-        <button class="btn"id="bP">+</button>
+        <button class="btn" onclick="bO()">1</button>
+        <button class="btn" onclick="bT()">2</button>
+        <button class="btn" onclick="bTh()">3</button>
+        <button class="btn" onclick="bP()">+</button>
       </div>
       <div Class="Row">
-        <button class="btn"id="bR">√x</button>
-        <button class="btn"id="bZ">0</button>
-        <button class="btn"id="bCo">,</button>
-        <button class="btn"id="bEq">=</button>
+        <button class="btn" onclick="bR()">√x</button>
+        <button class="btn" onclick="bZ()">0</button>
+        <button class="btn" onclick="bCo()">,</button>
+        <button class="btn" onclick="bEq()">=</button>
       </div>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
