Did the JavaScript to work

--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
       <div Class="Row">
         <button class="btn" onclick="bR()">√x</button>
         <button class="btn" onclick="bZ()">0</button>
-        <button class="btn" onclick="bCo()">,</button>
+        <button class="btn" onclick="bPo()">.</button>
         <button class="btn" onclick="bEq()">=</button>
       </div>
     </div>
+  </div>
+  <div id="Desc">
+    <h3>
+      A very simple calculator just so i can practice my new knowledge of JavaScript variables and onclick in HTML.
+    </h3>
+    <h3>
+      It only does simple calculations, like: "Number + Operator + Number"
+    </h3>
   </div>
   <script src="index.js"></script>
 </body>
